--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "final-project"
+name = "producer-consumer"
 version = "0.1.0"
+rust-version = "1.65.0"
+authors = ["Isi Bernoff"]
+description = "A simple banking application with concurrent transaction execution"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
